Revert "Seitenikon zu den Bildern einordnen"
This reverts commit c63bd63fadf72abd4347372d8211b045c4cc1919.

--- a/raetsel.html
+++ b/raetsel.html
@@ -14,7 +14,7 @@
     <title>CoderDojo Karlsruhe</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -118,14 +118,14 @@
                 <p>
                     Lies dir das Rätsel aufmerksam durch und versuche eine Lösung zu finden. Diese kannst du uns entweder
                     per E-Mail schicken oder zum nächsten Treffen mitbringen. Die Form der Lösung bleibt dir überlassen.
-                    Abhängig vom Problem könnte das zum Beispiel ein Bild, Text oder ein Programm sein. In regelmäßigen
-                    Abständen werden wir die kreativsten Vorschläge vorstellen und du hast sogar die Möglichkeit
+                    Abhängig vom Problem könnte das zum Beispiel ein Bild, Text oder ein Programm sein. In regelmäßigen 
+                    Abständen werden wir die kreativsten Vorschläge vorstellen und du hast sogar die Möglichkeit 
                     einen kleinen Preis zu gewinnen.
                 </p>
 
                 <p>
                     Keine Sorge, falls du einmal nicht die perfekte Lösung finden solltest! Darum geht es hier gar nicht.
-                    Wichtig ist, dass du dir Gedanken gemacht hast und kreativ warst. Natürlich dürft ihr auch gerne
+                    Wichtig ist, dass du dir Gedanken gemacht hast und kreativ warst. Natürlich dürft ihr auch gerne 
                     zusammenarbeiten, um ein besonders kniffliges Rätsel gemeinsam zu knacken.
                 </p>
 
