Initialie Liste an Materialien eingetragen; Aufgeräumt.

--- a/material_python.html
+++ b/material_python.html
@@ -22,10 +22,7 @@
     <!-- Custom CSS -->
     <link href="css/coderdojoka.css" rel="stylesheet">
     <link href="css/material.css" rel="stylesheet">
-    <link href="mat2.css" rel="stylesheet">
-    <link href="prism.css" rel="stylesheet">
-
-
+    <link href="css/material_viewer.css" rel="stylesheet">
     <link href="css/prism.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -70,7 +67,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-                <span>
+            <span>
                     <a class="navbar-brand" href="/">
                         <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo" class="navbar-brand-logo"/>
                         <span id="navbar-brand-name-collapse">
@@ -78,7 +75,7 @@
                         </span>
                     </a>
                 </span>
-                <span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i>
+            <span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i>
                 </span><a class="navbar-breadcrumb page-scroll" href="#page-top">Material</a>
         </div>
 
@@ -179,7 +176,7 @@
 <script src="js/jquery.easing.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="material.js"></script>
+<script src="js/material.js"></script>
 
 <script src="js/prism.js"></script>
 
