--- a/material_python.html
+++ b/material_python.html
@@ -76,7 +76,9 @@
                     </a>
                 </span>
             <span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i>
-                </span><a class="navbar-breadcrumb page-scroll" href="#page-top">Material</a>
+                </span><a class="navbar-breadcrumb page-scroll" href="material.html">Material</a>
+            <span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i>
+                </span><a class="navbar-breadcrumb page-scroll" href="#page-top">Python</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,16 +88,6 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li>
-                    <a class="scroll_to" href="#scratch">Scratch</a>
-                </li>
-                <li>
-                    <a class="scroll_to" href="#python">Python</a>
-                </li>
-                <li>
-                    <a class="scroll_to" href="#html">HTML</a>
-                </li>
-                <!-- <li><a class="scroll_to" href="#java">Java</a></li> -->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -109,7 +101,6 @@
         <div class="row">
 
             <div class="col-lg-8 col-lg-offset-2">
-
 
                 <div id="search">
                     <h1>Suche:</h1>
