--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <!-- AngularJS base and data scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
     <script src="js/angular/webApp.js"></script>
     <script src="js/data/eventList.js"></script>
     <script src="js/angular/eventController.js"></script>
