--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <div class="fb-like" data-href="https://facebook.com/pages/CoderDojo-Karlsruhe/1455190411441732"
              data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
         <p><span style="font-size:16px;"><a
-                href="https://www.sharelatex.com/github/repos/coderdojoka/satzung-hochschulgruppe/builds/latest/output.pdf">Satzung</a> (<a
+                href="doc/satzung-hochschulgruppe-coderdojo-karlsruhe.pdf">Satzung</a> (<a
                 href="https://github.com/coderdojoka/satzung-hochschulgruppe">Github</a>)</span></p>
     </div>
 </footer>
