Dokumente und externe Seiten in neuem Tab oeffnen

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
                 <p>CoderDojo ist eine weltweit verbreitete gemeinnützige Organisation, deren Ziel es ist, Kindern und
                     Jugendlichen Computer, Technik und vor allem das Programmieren näherzubringen. Die internationale
-                    Webseite findet ihr <a href="https://coderdojo.com/">hier</a>.</p>
+                    Webseite findet ihr <a href="https://coderdojo.com/" target="_blank">hier</a>.</p>
 
 
                 <h2>Warum CoderDojo?</h2>
@@ -312,7 +312,7 @@
                     eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
 
                 <p>Außerdem müssen bei der ersten Teilnahme die <a
-                        href="doc/Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
+                        href="doc/Teilnahmebedingungen.pdf" target="_blank">Teilnahmebedingungen</a>
                     ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
 
 
@@ -543,18 +543,18 @@
             <h2>Unterstützer</h2>
 
             <div class="col-lg-4 col-lg-offset-2">
-                <a href="http://www.kit.edu/"><img src="img/kit.png" alt="KIT"
+                <a href="http://www.kit.edu/" target="_blank"><img src="img/kit.png" alt="KIT"
                                                    style="height: 120px; padding-top: 30px;"></a>
             </div>
             <div class="col-lg-4">
-                <a href="https://www.inovex.de/"><img src="img/inovex.png" alt="Inovex" style="height: 150px;"></a>
+                <a href="https://www.inovex.de/" target="_blank"><img src="img/inovex.png" alt="Inovex" style="height: 150px;"></a>
             </div>
 
             <br/>
 
             <h2>Kooperationspartner</h2>
             <div class="col-lg-4 col-lg-offset-4">
-                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids"
+                <a href="http://www.it-for-kids.org/" target="_blank"><img src="img/IT4KidsLogo2.png" alt="IT4Kids"
                                                            style="height: auto; max-height: 110px; max-width: 100%"></a>
             </div>
         </div>
@@ -572,8 +572,8 @@
         <div class="fb-like" data-href="https://facebook.com/pages/CoderDojo-Karlsruhe/1455190411441732"
              data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
         <p><span style="font-size:16px;"><a
-                href="doc/satzung-hochschulgruppe-coderdojo-karlsruhe.pdf">Satzung</a> (<a
-                href="https://github.com/coderdojoka/satzung-hochschulgruppe">Github</a>)</span></p>
+                href="doc/satzung-hochschulgruppe-coderdojo-karlsruhe.pdf" target="_blank">Satzung</a> (<a
+                href="https://github.com/coderdojoka/satzung-hochschulgruppe" target="_blank">Github</a>)</span></p>
     </div>
 </footer>
 
