Link auf neue Materialienseite.

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                     <a class="" href="mentoren.html">Mentoren</a>
                 </li>
 
-                <li class="visible-xs">
-                    <a href="/material.html">Material</a>
+                <li>
+                    <a href="http://coderdojoka.github.io/Materialien/">Material</a>
                 </li>
-
+<!--
                 <li class="dropdown hidden-xs">
                     <a class="dropdown-toggle" href="/material.html">Material</a>
                     <ul class="dropdown-menu">
@@ -144,7 +144,7 @@
                         </li>
                     </ul>
                 </li>
-
+-->
                 <li>
                     <a class="page-scroll" href="#contact">Kontakt</a>
                 </li>
