keine neuen teilnehmer info.

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 
                 </p>
 
+                <h2 style="color: red; font-weight: bold;">Aktuell können wir bis April leider keine neuen Teilnehmer aufnehmen!</h2>   
 
                 <p>Jeder, der teilnehmen will, muss sich vorher bei uns per Mail unter
                     <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden.
