--- a/index.html
+++ b/index.html
@@ -288,14 +288,15 @@
 
                 </p>
 
-                <h2 style="color: red; font-weight: bold;">Aktuell können wir bis April leider keine neuen Teilnehmer aufnehmen!</h2>   
-
-                <p>Jeder, der teilnehmen will, muss sich vorher bei uns per Mail unter
-                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden.
-
-                    <br>
-                    Bei der Erstanmeldung sollten in der Anmeldung folgende Dinge stehen:
-                </p>
+                <h2 style="color: red; font-weight: bold;">Aktuell können wir leider keine neuen Teilnehmer aufnehmen!</h2> 
+  
+		
+                <p>Wer sich auf die Warteliste setzten lassen möchte, schreibt bitte eine Mail an
+                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a>. Dann können wir eine Abschätzung zum 						nächstmöglichen Einstiegstermin geben.
+				</p>
+                <p>
+                    In der Mail sollten folgende Dinge stehen:
+               
                 <ul style="text-align: left">
                     <li>Wie alt bist du?</li>
                     <li>Was für Vorkentnisse bringst du mit?</li>
@@ -303,6 +304,7 @@
                     <li>Was würdest du gerne im CoderDojo lernen?</li>
                 </ul>
 
+				</p>
 
                 <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet
                     werden.
