--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
                 </li>
 
                 <li class="visible-xs">
-                    <a href="#about">Informationen</a>
+                    <a class="page-scroll" href="#about">Informationen</a>
                 </li>
 
                 <li class="visible-xs">
-                    <a href="#join">Teilnehmen</a>
+                    <a class="page-scroll" href="#join">Teilnehmen</a>
                 </li>
 
                 <li class="visible-xs">
-                    <a href="#faq">Fragen</a>
+                    <a class="page-scroll" href="#faq">Fragen</a>
                 </li>
 
                 <li class="visible-xs">
@@ -101,13 +101,13 @@
                 </li>
 
                 <li class="dropdown hidden-xs">
-                    <a class="dropdown-toggle" href="#about">Informationen</a>
+                    <a class="dropdown-toggle page-scroll" href="#about">Informationen</a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#join">Teilnehmen</a>
+                            <a class="page-scroll" href="#join">Teilnehmen</a>
                         </li>
                         <li>
-                            <a href="#faq">Fragen</a>
+                            <a class="page-scroll" href="#faq">Fragen</a>
                         </li>
                         <li>
                             <a href="neues.html">Neues</a>
@@ -120,7 +120,7 @@
                 </li>
 
                 <li>
-                    <a class="" href="mentoren.html">Mentoren</a>
+                    <a href="mentoren.html">Mentoren</a>
                 </li>
 
                 <li>
@@ -178,7 +178,7 @@
                 </a>
             </div>
 
-  <table id="news_container">
+            <table id="news_container">
                 <tr>
                     <td>
                         <div class="triangle_box">
@@ -187,7 +187,7 @@
                         </div>
                     </td>
                     <td data-ng-controller="eventController" >
-                        <a href="#events" style="font-size: 1.2em">
+                        <a class="page-scroll" href="#events" style="font-size: 1.2em">
                             <span data-ng-if="areThereFutureEvents == true" >{{nextEvent.displayDay}}. {{nextEvent.displayMonthTextShort}}</span>
                             <span data-ng-if="areThereFutureEvents == false" >Noch festzulegen.</span>
                         </a>
