--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p data-ng-if="areThereFutureEvents == true" >Das nächste Treffen findet am Freitag, dem
+                <p data-ng-if="areThereFutureEvents == true" >Das nächste Treffen findet am Donnerstag, dem
                 {{nextEvent.displayDay}}.{{nextEvent.displayMonth}}.{{nextEvent.displayYear}}
                 von {{nextEvent.displayStartTime}} Uhr bis {{nextEvent.displayEndTime}} Uhr
                 im {{nextEvent.location}} der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
