--- a/index.html
+++ b/index.html
@@ -324,11 +324,10 @@
 
 
                 <p>
-                    Ab der zweiten Teilnahme musst du dich über das CoderDojo-Zen Portal für die einzelnen Treffen
-                    anmelden. Eine Anleitung zur Verwendung von Zen ist <a
-                        href="https://github.com/coderdojoka/Materialien/raw/master/Zen_Anmeldung/zen_anmeldung.pdf">hier</a>
-                    zufinden.
-
+                    Wenn du ins Dojo aufgenommen worden bist, musst du dich im CoderDojo-Zen Portal für die einzelnen Treffen
+                    anmelden. Eine Anleitung (Stand Januar 2017) zur Registierung und Verwendung des Zen-Portals ist <a
+                        href="https://github.com/coderdojoka/Materialien/raw/master/Daten/Zen_Anmeldung/zen_anmeldung.pdf">hier</a>
+                    zu finden.
                 </p>
 
             </div>
