Neue Termine. Zen-Anleitung vorerst entfernt.

--- a/index.html
+++ b/index.html
@@ -307,12 +307,9 @@
                         href="doc/Teilnahmebedingungen.pdf" target="_blank">Teilnahmebedingungen</a>
                     ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
 
-
                 <p>
                     Wenn du ins Dojo aufgenommen worden bist, musst du dich im CoderDojo-Zen Portal für die einzelnen Treffen
-                    anmelden. Eine Anleitung (Stand Januar 2017) zur Registierung und Verwendung des Zen-Portals ist <a
-                        href="https://github.com/coderdojoka/Materialien/raw/master/Daten/Zen_Anmeldung/zen_anmeldung.pdf">hier</a>
-                    zu finden.
+                    anmelden. Genauere Infos diesbezüglich schicken wir dir dann zu.
                 </p>
 
             </div>
