x-mas scratch embed.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,23 @@
 </header>
 
 
+
+<!-- About Section -->
+<section id="updates" class="content-section text-center">
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 scratch-container">
+                <h2>Frohe Weihnachten wünscht das CoderDojo Karlsruhe</h2>
+                <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/270604892/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <div class="caption">"Merry X-Mas", programmiert von Luca S.</caption>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <!-- About Section -->
 <section id="about" class="content-section text-center">
     <div class="container">
