--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 scratch-container">
                 <h2>Frohe Weihnachten wünscht das CoderDojo Karlsruhe</h2>
-                <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/270604892/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <script src=https://phosphorus.github.io/embed.js?id=270604892&ui=false></script>
                 <div class="caption">"Merry X-Mas", programmiert von Luca S.</caption>
             </div>
         </div>
