--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- AngularJS base and data scripts -->
+    <!-- If jQuery is used, load (include) AngularJS BEFORE jQuery! -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="js/angular/webApp.js"></script>
     <script src="js/data/eventList.js"></script>
