Update AngularJS script to v1.7.6 (locally included)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- AngularJS base and data scripts -->
     <!-- If jQuery is used, load (include) AngularJS BEFORE jQuery! -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="js/angular/angular-1-7-6-min.js"></script>
     <script src="js/angular/webApp.js"></script>
     <script src="js/data/eventList.js"></script>
     <script src="js/angular/eventController.js"></script>
