fix js script name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- AngularJS base and data scripts -->
     <!-- If jQuery is used, load (include) AngularJS BEFORE jQuery! -->
-    <script src="js/angular/angular.min.js.js"></script>
+    <script src="js/angular/angular.min.js"></script>
     <script src="js/angular/webApp.js"></script>
     <script src="js/data/eventList.js"></script>
     <script src="js/angular/eventController.js"></script>
