Hinweis für neue Termine eingefügt.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 von {{nextEvent.displayStartTime}} Uhr bis {{nextEvent.displayEndTime}} Uhr
                 im {{nextEvent.location}} der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
-                <p data-ng-if="areThereFutureEvents == false" >Das Datum des nächsten Treffens wurde noch nicht festgelegt.</p>
+                <p data-ng-if="areThereFutureEvents == false" ><span style="color: red; font-weight:bold">Aufgrund des Corona-Virus sind die nächsten CoderDojos abgesagt. Das Datum des nächsten Treffens ist noch nicht festgelegt. Wir aktualisieren die Termine sobald sich die Lage gebessert hat.</span></p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät für Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt.</p>
 
