Remove the outdated location address

--- a/index.html
+++ b/index.html
@@ -509,14 +509,11 @@
 
                 <br>
 
+                <!-- 
                 <h2>Wo finden die Treffen statt?</h2>
 
-                <p>Karlsruher Institut für Technologie (KIT)<br>
-                    Fakultät für Informatik<br>
-                    Gebäude 50.34<br>
-                    Am Fasanengarten 5<br>
-                    76131 Karlsruhe</p>
-
+                <p>TODO</p>
+                -->
             </div>
         </div>
     </div>
