--- a/index.html
+++ b/index.html
@@ -100,13 +100,6 @@
                     <a class="page-scroll" href="#events">Termine</a>
                 </li>
 
-                <li>
-                    <a class="" href="mentoren.html">Mentoren</a>
-                </li>
-
-                <li>
-                    <a href="http://coderdojoka.github.io/Materialien/">Material</a>
-                </li>
 <!--
                 <li class="dropdown hidden-xs">
                     <a class="dropdown-toggle" href="/material.html">Material</a>
@@ -161,6 +154,8 @@
 
   <table id="news_container">
                 <tr>
+                                            <!--
+
                     <td>
                         <div class="triangle_box">
                             <div class="triangle_text">Nächstes Treffen</div>
@@ -173,6 +168,8 @@
                             <span data-ng-if="areThereFutureEvents == false" >Noch festzulegen.</span>
                         </a>
                     </td>
+                                        -->
+
                 </tr>
                 
                 <!--
@@ -266,30 +263,10 @@
                     <img class="img-thumbnail" src="img/codo/bild_2.jpg" alt=""/>
                 </a>
 
-                <p>
-                    Die verfügbaren Plätze in jedem Dojo sind begrenzt und für regelmäßige Teilnehmer gilt, wer sich zu
-                    erst anmeldet, bekommt einen Platz. Neuanmeldungen können zur Zeit nur begrenzt angenommen werden
-                    und sollten deshalb mindestens eine Woche vor dem CoderDojo bei uns eingehen.
-
-                </p>
-
-                <h2 style="color: red; font-weight: bold;">Aktuell können wir leider keine neuen Teilnehmer aufnehmen!</h2>
 
 
-                <p>Wer sich auf die Warteliste setzten lassen möchte, schreibt bitte eine Mail an
-                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a>. Dann können wir eine Abschätzung zum                      nächstmöglichen Einstiegstermin geben.
-                </p>
-                <p>
-                    In der Mail sollten folgende Dinge stehen:
+                <h2 style="color: red; font-weight: bold;">Derzeit sind keine Treffen geplant.</h2>
 
-                <ul style="text-align: left">
-                    <li>Wie alt bist du?</li>
-                    <li>Was für Vorkentnisse bringst du mit?</li>
-                    <li>Bringst du einen eigenen Laptop mit?</li>
-                    <li>Was würdest du gerne im CoderDojo lernen?</li>
-                </ul>
-
-                </p>
 
                 <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet
                     werden.
